--- a/test.html
+++ b/test.html
@@ -118,6 +118,12 @@
         .red-text {
             color: red;
         }
+        .form-item input[type="checkbox"] {
+            flex: 0;
+            width: 20px;
+            height: 20px;
+            min-width: 20px;
+        }
     </style>
 </head>
 <body>
@@ -132,18 +138,20 @@
                 <option value="ASME">ASME</option>
             </select>
         </div>
-        <div class="form-item" id="klantprocedureDiv" style="display: none;">
-            <label for="klantprocedureCheckbox">Klantprocedure:</label>
-            <input type="checkbox" id="klantprocedureCheckbox" style="width: 20px; height: 20px; flex: 0;">
-        </div>
-        <div class="form-item" id="enBSubProcedureDiv" style="display:none;">
-            <label for="enBSubProcedure">EN-B Sub-procedure:</label>
-            <select id="enBSubProcedure" name="enBSubProcedure">
-                <option value="RT21013">RT21013 EN-B</option>
-                <option value="RT16172">RT16172 Sabic</option>
-                <option value="RT14171">RT14171 Sitech</option>
-                <option value="RT20230059">RT 2023 0059 Haffmans</option>
-            </select>
+        <div id="en-b-extra-options" style="display: none;">
+            <div class="form-item">
+                <label for="klantprocedureCheckbox">Klantprocedure:</label>
+                <input type="checkbox" id="klantprocedureCheckbox">
+            </div>
+            <div class="form-item" id="enBSubProcedureDiv" style="display:none;">
+                <label for="enBSubProcedure">EN-B Sub-procedure:</label>
+                <select id="enBSubProcedure" name="enBSubProcedure">
+                    <option value="RT21013">RT21013 EN-B</option>
+                    <option value="RT16172">RT16172 Sabic</option>
+                    <option value="RT14171">RT14171 Sitech</option>
+                    <option value="RT20230059">RT 2023 0059 Haffmans</option>
+                </select>
+            </div>
         </div>
         <div class="form-item">
             <label for="diameter">Diameter (De) in mm:</label>
@@ -170,33 +178,6 @@
                     <option value="Ir192">Ir-192</option>
                 </select>
             </div>
-            <div class="form-item" id="ovenMateriaalDiv" style="display:none;">
-                <label for="ovenMateriaal">Ovenmateriaal:</label>
-                <select id="ovenMateriaal" name="ovenMateriaal">
-                    <option value="Nee">Nee</option>
-                    <option value="Ja">Ja</option>
-                </select>
-            </div>
-             <div class="form-item" id="optieDiv" style="display:none;">
-                <label for="optie">Centraal of Excentrisch:</label>
-                <select id="optie" name="optie">
-                    <option value="">Nee</option>
-                    <option value="1">Centraal</option>
-                    <option value="2">Excentrisch</option>
-                </select>
-            </div>
-            <div class="form-item" id="ovaaltjeDiv" style="display:none;">
-                <label for="ovaaltje">Ovaaltje:</label>
-                <select id="ovaaltje" name="ovaaltje">
-                    <option value="Nee">Nee</option>
-                    <option value="Ja">Ja</option>
-                </select>
-            </div>
-            <div class="form-item" id="lasbreedteDiv" style="display:none;">
-                <label for="lasbreedte">Lasbreedte (mm):</label>
-                <input type="number" id="lasbreedte" name="lasbreedte" step="0.01">
-            </div>
-        </div>
         <div class="form-item">
             <label for="brongrootte">Brongrootte in mm:</label>
             <input type="text" id="brongrootte" name="brongrootte" list="bronKeuzes" required placeholder="Kies of vul in (mm)">
@@ -518,7 +499,7 @@
         // Show/hide options based on procedure
         document.getElementById("procedure").addEventListener("change", function() {
             var procedure = document.getElementById("procedure").value;
-            var klantprocedureDiv = document.getElementById("klantprocedureDiv");
+            var enBExtraOptions = document.getElementById("en-b-extra-options");
             var enBSubProcedureDiv = document.getElementById("enBSubProcedureDiv");
             var ovenMateriaalDiv = document.getElementById("ovenMateriaalDiv");
             var klantprocedureCheckbox = document.getElementById("klantprocedureCheckbox");
@@ -527,22 +508,20 @@
                 document.getElementById("enOptions").style.display = "block";
                 document.getElementById("asmeOptions").style.display = "none";
                 if (procedure === "EN-B") {
-                    klantprocedureDiv.style.display = "flex";
-                    // Show sub-procedure div if checkbox is already checked
-                    enBSubProcedureDiv.style.display = klantprocedureCheckbox.checked ? "flex" : "none";
+                    enBExtraOptions.style.display = "block";
                 } else { // EN-A
-                    klantprocedureDiv.style.display = "none";
+                    enBExtraOptions.style.display = "none";
+                    klantprocedureCheckbox.checked = false;
                     enBSubProcedureDiv.style.display = "none";
                     ovenMateriaalDiv.style.display = "none";
-                    klantprocedureCheckbox.checked = false;
                 }
             } else { // ASME
                 document.getElementById("enOptions").style.display = "none";
                 document.getElementById("asmeOptions").style.display = "block";
-                klantprocedureDiv.style.display = "none";
+                enBExtraOptions.style.display = "none";
+                klantprocedureCheckbox.checked = false;
                 enBSubProcedureDiv.style.display = "none";
                 ovenMateriaalDiv.style.display = "none";
-                klantprocedureCheckbox.checked = false;
                 updateBronGrootteOptions(); // Call to update brongrootte options for ASME
 
                 // Automatically set ASME BKI placement based on current technique
@@ -556,6 +535,16 @@
             }
             handleDiameterTechniqueRestriction(); // Call to handle technique restriction
             autoCalculate(); // Ensure everything recalculates
+        });
+
+        document.getElementById("klantprocedureCheckbox").addEventListener("change", function() {
+            const enBSubProcedureDiv = document.getElementById("enBSubProcedureDiv");
+            if (this.checked) {
+                enBSubProcedureDiv.style.display = "flex";
+            } else {
+                enBSubProcedureDiv.style.display = "none";
+            }
+            autoCalculate();
         });
 
         document.getElementById("klantprocedureCheckbox").addEventListener("change", function() {
