--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -173,6 +173,7 @@
 
             if (norm === "EN-A") {
                 var technique = document.getElementById("technique").value;
+                var source = document.getElementById("source").value; // Get source here
                 let penetratedThickness = 0;
                 if (technique === "SWSI") {
                     penetratedThickness = wanddikte;
@@ -215,6 +216,21 @@
                     else if (penetratedThickness <= 50) wire = "W9";
                     else if (penetratedThickness <= 60) wire = "W8";
                     else if (penetratedThickness <= 85) wire = "W7";
+                }
+
+                // New edge case logic for EN-A
+                if (source === "Se75") {
+                    if (technique === "DWDI" && penetratedThickness <= 12) {
+                        wire = "W" + (parseInt(wire.substring(1)) - 1);
+                    } else if ((technique === "SWSI" || technique === "DWSI") && penetratedThickness <= 20) {
+                        wire = "W" + (parseInt(wire.substring(1)) - 1);
+                    }
+                } else if (source === "Ir192") {
+                    if (technique === "DWDI" && penetratedThickness > 10 && penetratedThickness <= 25) {
+                        wire = "W" + (parseInt(wire.substring(1)) - 1);
+                    } else if ((technique === "SWSI" || technique === "DWSI") && penetratedThickness > 10 && penetratedThickness <= 40) {
+                        wire = "W" + (parseInt(wire.substring(1)) - 1);
+                    }
                 }
             } else if (norm === "EN-B") {
                 var technique = document.getElementById("technique").value;
